Added Jest functionality

--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -49,7 +49,7 @@
     <meta name="msapplication-config" content="img/brand/favicons/browserconfig.xml?v=6">
 </head>
 <body class="home">
-    <main role="main" id="app"></main>
+    <header role="banner" id="app"></header>
     <!-- build:js script/script.js -->
     <!-- bower:js -->
     <!-- endbower -->
